--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ section{
 
 }
 section#s1{
-    background-image: url(imagens/imagens/background001.jpg);
+    background-image: url(imagens/background001.jpg);
     background-position: right center;
     background-size: cover;
     background-attachment: fixed;
@@ -70,7 +70,7 @@ section#s1{
 }
 
 section#s2{
-    background-image: url(imagens/imagens/background002.jpg);
+    background-image: url(imagens/background002.jpg);
     background-position: right center;
     background-size: cover;
     background-attachment: fixed;
