--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ section{
 }
 section#s1{
     background-image: url(imagens/background001.jpg);
-    background-position: right center;
+    background-position: center center;
     background-size: cover;
     background-attachment: fixed;
     color: white;
@@ -71,7 +71,7 @@ section#s1{
 
 section#s2{
     background-image: url(imagens/background002.jpg);
-    background-position: right center;
+    background-position: center center;
     background-size: cover;
     background-attachment: fixed;
     color: white;
